# cysca-demo

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manifest.json  pyproject.toml  python  requirements.txt
.githooks/: post-commit
diagrams/: README.md  config_reload.mmd  device_handshake.mmd  fault_recovery.mmd  system_boot.mmd  telemetry_trace.mmd
docs/: agent-guidance.md  cysca-qa-guidance.md  gauge-vs-robot-framework.md
env/default/: default.properties  python.properties
env/docker/: default.properties  python.properties
reports/html-report/: index.html
reports/html-report/js/: search_index.js
reports/html-report/specs/: config_reload.html  device_handshake.html  fault_recovery.html  system_boot.html  telemetry_trace.html
reports/xml-report/: result.xml
scripts/: bootstrap-local-mirror.sh  entrypoint.sh  install-codex-skill.sh  install-cysca-qa-skill.sh  run-gocd.sh  sync-local.sh
skills/cysca-qa-complex-systems/: SKILL.md
skills/cysca-qa-complex-systems/references/: cysca-qa-notes.md
skills/gauge-python-automation/: SKILL.md
skills/gauge-python-automation/references/: project-map.md
specs/: config_reload.spec  device_handshake.spec  fault_recovery.spec  system_boot.spec  telemetry_trace.spec
step_impl/: cysca_mock_steps.py  example_steps.py
step_impl/cysca_mock/assertions/: controller_assertions.py  device_assertions.py  telemetry_assertions.py
step_impl/cysca_mock/data/: control_state.json
step_impl/cysca_mock/domain/: controller.py  device.py  state.py  telemetry.py
(+3 files in other folders)
