[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gauge-python-automation"
version = "0.1.0"
description = "Python Gauge test automation starter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "getgauge==0.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
